@@ -24,6 +24,7 @@
 #include <stdarg.h>
 #include <string.h>
 #include <errno.h>
+#include <time.h>
 #include <ctype.h>
 #include <stdlib.h>
 #include <unistd.h>
