@@ -1,5 +1,15 @@
 2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int C] Move #include <time.h> to .c files.
+
+	* base.h: Don't #include <time.h>.
+	* maketime.c: #include <time.h>.
+	* partime.c: Likewise.
+	* rcstime.c: Likewise.
+	* rcsutil.c: Likewise.
+
+2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Presume <unistd.h> provides STD{IN,OUT,ERR}_FILENO.
 
 	* base.h (STDIN_FILENO, STDOUT_FILENO, STDERR_FILENO): Delete
